crates/aerro/tests/ui/fail/unknown_attr.stderr
error: unknown aerro attribute `nonsense`
 --> tests/ui/fail/unknown_attr.rs:5:56
  |
5 |     #[aerro(category = "business", code = "not_found", nonsense = "x")]
  |                                                        ^^^^^^^^
